infra/terraform/envs/production/sockshop-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sockshop
  namespace: sockshop
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-1:455110051621:certificate/d7ec3e28-53c4-446d-9ae5-a8d09e8b41c1
    alb.ingress.kubernetes.io/ssl-redirect: '443'
spec:
  rules:
    - host: sockshop.jyouhou.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: front-end
                port:
                  number: 80
